Correcting horizontal scrolling

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -259,7 +259,7 @@
       left: auto;
 
       [dir=rtl] & {
-        left: -100rem;
+        right: -100rem;
       }
     }
 
